--- a/package.json
+++ b/package.json
@@ -32,11 +32,11 @@
   "eslintConfig": {
     "env": {
       "browser": true,
-      "node": true
+      "node":    true
     },
     "parserOptions": {
-      "ecmaVersion": 7,
-      "sourceType": "module",
+      "ecmaVersion":  7,
+      "sourceType":   "module",
       "ecmaFeatures": {
         "jsx": true
       }
@@ -52,7 +52,8 @@
       "window": true,
       "jQuery": true,
       "__dirname": true,
-      "__pathname": true
+      "__pathname": true,
+      "Proxy": true
     },
     "parser": "babel-eslint",
     "plugins": [
@@ -79,18 +80,18 @@
         "never"
       ],
       "flowtype/generic-spacing": [
-        2,
+        1,
         "never"
       ],
       "flowtype/no-primitive-constructor-types": 2,
-      "flowtype/no-weak-types": 1,
+      "flowtype/no-weak-types": 0,
       "flowtype/object-type-delimiter": [
         2,
         "comma"
       ],
       "flowtype/require-parameter-type": 2,
       "flowtype/require-return-type": [
-        2,
+        1,
         "always",
         {
           "annotateUndefined": "never"
@@ -118,7 +119,7 @@
         "^([A-Z][a-z0-9]+)+Type$"
       ],
       "flowtype/union-intersection-spacing": [
-        2,
+        1,
         "always"
       ],
       "flowtype/use-flow-type": 1,
@@ -127,7 +128,7 @@
     "settings": {
       "react": {
         "pragma": "React",
-        "version": "15.3.1"
+        "version": "15.5.4"
       },
       "flowtype": {
         "onlyFilesWithFlowAnnotation": true
